<resources>
    <string name="app_name">PE_PRM391_Example</string>
    <string name="username">User Name</string>
    <string name="address">Address</string>
    <string name="button_add">Add User</string>
    <string name="button_update">Update</string>
    <string name="button_delete">Delete</string>
    <string name="back_to_home">Back Home</string>
    <string name="clear_all">Clear All</string>
</resources>